Bump parent pom and test dependencies